syntax = "proto3";

option csharp_namespace = "ShelfLayoutManagement.Common.StockKeepingUnit";

package StockKeepingUnit;

service Products {
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc StreamProducts(StreamProductsRequest) returns (stream Product);
    rpc CreateProduct(CreateProductRequest) returns (Product);
    rpc GetProduct(GetProductRequest) returns (Product);
    rpc UpdateProduct(UpdateProductRequest) returns (Product);
    rpc DeleteProduct(DeleteProductRequest) returns (Empty);
}

message Empty{}

message ListProductsRequest {
    int32 page_size = 1;
    int32 page = 2;
    ProductField order_by = 3;
}

enum ProductField{
    PRODUCT_FIELD_JANCODE  = 0;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message StreamProductsRequest {
    string order_by = 1;
}

message CreateProductRequest{
    Product product = 1;
}

message GetProductRequest{
    string jan_code = 1;
    string name = 2;
}

message UpdateProductRequest{
    Product product = 1;
}

message DeleteProductRequest{
    string jan_code = 1;
}

message Product {
    string jan_code = 1;
    string name = 2;
    double x = 3;
    double y = 4;
    double z = 5;
    string image_url = 6;
    int32 size = 7;
    int64 timestamp = 8;
    string shape = 9;
}
